# bachero

./: CMakeLists.txt  cloc.sh  main.cpp
include/Engine/: Engine.h  FramerateLimiter.h  Game.h  GameObject.h
include/Engine/Common/: DebugMode.h  DebugWidget.h  DeltaTime.h  FramerateLimiter.h  HashMap.h  Singleton.h  SmallVector.h
include/Engine/Components/: TransformComponent.h
include/Engine/ECS/: Component.h  ECS.h  Entity.h  System.h
include/Engine/Input/: InputManager.h  InputMapper.h
include/Engine/Math/: Mat2x2.h  Rect.h  Vector2.h  Vector3.h
include/Engine/Physics/: AABBTree.h  ColliderComponent.h  Manifold.h  PhysicsSystem.h  RRect.h  RigidBodyComponent.h
include/Engine/Render/: Camera.h  CameraComponent.h  Color.h  Environment.h  RenderSystem.h  RenderUtils.h  Renderer.h  RuntimeException.h  Sprite.h  SpriteComponent.h  Text.h  Texture.h  TextureManager.h  Window.h
include/Game/: GameLoop.h  Player.h
include/Game/Components/: FollowingCameraComponent.h  PlayerAnimationComponent.h  PlayerMovementComponent.h
include/Game/Entities/: Box.h  FollowingCamera.h  Player.h  Wall.h
include/Math/: Vector2.h  Vector2d.h  Vector3.h  Vector3d.h
src/Engine/: Engine.cpp  Game.cpp
src/Engine/Common/: DeltaTime.cpp
src/Engine/Input/: InputManager.cpp
src/Engine/Physics/: AABBTree.cpp
src/Engine/Render/: Texture.cpp  TextureManager.cpp  Window.cpp
test/: main.cpp
test/Engine/Common/: HashMapTest.h  SmallVectorTest.h
test/Engine/Physics/: AABBTreeTest.h
